# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missingh--head--0.5
#

2004-11-18 16:35:38 GMT	John Goerzen <jgoerzen@complete.org>	patch-70

    Summary:
      Checkpointing
    Revision:
      missingh--head--0.5--patch-70


    new files:
     libsrc/MissingH/ConfigParser/.arch-ids/=id
     libsrc/MissingH/ConfigParser/Lexer.hs
     libsrc/MissingH/ConfigParser/Parser.hs

    modified files:
     ChangeLog debian/changelog

    new directories:
     libsrc/MissingH/ConfigParser
     libsrc/MissingH/ConfigParser/.arch-ids


2004-11-18 14:55:24 GMT	John Goerzen <jgoerzen@complete.org>	patch-69

    Summary:
      Small doc update for printf
    Revision:
      missingh--head--0.5--patch-69


    modified files:
     ChangeLog libsrc/MissingH/Printf.hs


2004-11-17 20:56:00 GMT	John Goerzen <jgoerzen@complete.org>	patch-68

    Summary:
      Added generic sprintfG functions
    Revision:
      missingh--head--0.5--patch-68


    modified files:
     ChangeLog libsrc/MissingH/Printf.hs


2004-11-15 21:36:33 GMT	John Goerzen <jgoerzen@complete.org>	patch-67

    Summary:
      Updated Cabal file to 0.6.0
    Revision:
      missingh--head--0.5--patch-67


    modified files:
     ChangeLog Setup.description


2004-11-15 21:33:57 GMT	John Goerzen <jgoerzen@complete.org>	patch-66

    Summary:
      Updated Cabal files
    Revision:
      missingh--head--0.5--patch-66


    modified files:
     ChangeLog Setup.description


2004-11-15 21:31:21 GMT	John Goerzen <jgoerzen@complete.org>	patch-65

    Summary:
      Updated control file to use more recent haskell-devscripts
    Revision:
      missingh--head--0.5--patch-65


    modified files:
     ChangeLog debian/changelog debian/control
     libsrc/MissingH/Printf.hs libsrc/MissingH/Printf/Types.hs


2004-11-15 21:05:53 GMT	John Goerzen <jgoerzen@complete.org>	patch-64

    Summary:
      Checkpointing
    Revision: